[gd_scene load_steps=11 format=3 uid="uid://cklpthhbe5lxb"]

[ext_resource type="Script" path="res://scenes/background.gd" id="1_vlg4o"]
[ext_resource type="Texture2D" uid="uid://r06eo26wd25" path="res://graphics/texture.png" id="1_xswbu"]
[ext_resource type="Texture2D" uid="uid://dqrxr6kjnev62" path="res://graphics/texture_dark.png" id="3_hxog6"]

[sub_resource type="Animation" id="Animation_4dfqs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xpovb"]
resource_name = "loop"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1000, -1000)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cep3"]
_data = {
"RESET": SubResource("Animation_4dfqs"),
"loop": SubResource("Animation_xpovb")
}

[sub_resource type="Animation" id="Animation_70ti8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/BackgroundDark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l02iv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/BackgroundDark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oywbh"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/BackgroundDark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqgpl"]
_data = {
"RESET": SubResource("Animation_70ti8"),
"fade_in": SubResource("Animation_l02iv"),
"fade_out": SubResource("Animation_oywbh")
}

[node name="Background" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vlg4o")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1052.0
offset_bottom = 1037.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xswbu")
expand_mode = 1
stretch_mode = 1

[node name="BackgroundDark" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hxog6")
expand_mode = 1
stretch_mode = 1

[node name="LoopAnim" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_0cep3")
}
speed_scale = 0.25

[node name="Faders" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pqgpl")
}

[connection signal="animation_finished" from="LoopAnim" to="." method="_on_loop_anim_animation_finished"]
